# src/controllers/auth.controller.ts
@@ -23,13 +23,37 @@ const registerValidateSchema = Yup.object({
   fullName: Yup.string().required(),
   userName: Yup.string().required(),
   email: Yup.string().email().required(),
-  password: Yup.string().required(),
+  password: Yup.string().required().min(6, "Password mush be at least 6 characters").test('at-least-one-uppercase-letter', "Contains at least one uppercase letter", (value) => {
+    if(!value){
+      return false;
+    };
+
+    const regex = /^(?=.*[A-Z])/;
+    return regex.test(value);
+  }).test('at-least-one-number', "Contains at least one number", (value) => {
+    if(!value){
+      return false;
+    };
+
+    const regex = /^(?=.*\d)/;
+    return regex.test(value);
+  }),
   confirmPassword: Yup.string().required().oneOf([Yup.ref("password"), ""], "Password must be match")
 });
 
 export default {
 
   async register(req: Request, res: Response){
+
+    /**
+    #swagger.tags = ['Auth']
+    #swagger.requestBody = {
+      required: true,
+      schema: {$ref: "#/components/schemas/RegisterRequest"}
+    }
+    */
+
+
     const {
       fullName,
       userName,
@@ -68,6 +92,7 @@ export default {
   async login(req: Request, res: Response){
 
    /**
+    #swagger.tags = ['Auth']
     #swagger.requestBody = {
       required: true,
       schema: {$ref: "#/components/schemas/LoginRequest"}
@@ -88,9 +113,10 @@ export default {
           },
           {
             userName: identifier
-          }
-        ]
-      })
+          },
+        ],
+        isActive: true,
+      });
 
       if(!userByIdentifier){
         return res.status(403).json({
@@ -131,6 +157,7 @@ export default {
   async me(req: IreqUser, res: Response){
 
     /**
+     #swagger.tags = ['Auth']
      #swagger.security = [{
       "bearerAuth": []
      }]
@@ -151,4 +178,39 @@ export default {
       })
     }
   },
+
+  // Fungsi activation
+  async activation(req: Request, res: Response) {
+
+    /**
+     #swagger.tags = ['Auth']
+     #swagger.requestBody = {
+      required: true,
+      schema: {$ref: "#/components/schemas/ActivationRequest"}
+    }
+    */
+
+    try {
+      const { code } = req.body as { code: string };
+
+      const user = await UserModel.findOneAndUpdate({
+        activationCode: code,
+      }, {
+        isActive: true,
+      },{
+        new: true,
+      });
+      res.status(200).json({
+        message: "User successfully activated",
+        data: user,
+      })
+
+    } catch (error) {
+      const err = error as unknown as Error;
+      res.status(400).json({
+        message: err.message,
+        data: null
+      })
+    }
+  }
 }
